@@ -24,10 +24,15 @@
 #ifndef CLUSTER_AGENCY_CALLBACK_REGISTRY_H
 #define CLUSTER_AGENCY_CALLBACK_REGISTRY_H 1
 
+#include "Agency/AgencyComm.h"
 #include "Basics/ReadWriteLock.h"
-#include "Cluster/AgencyCallback.h"
+#include "RestServer/Metrics.h"
+
+#include <memory>
 
 namespace arangodb {
+class AgencyCallback;
+
 namespace application_features {
 class ApplicationServer;
 }
@@ -35,7 +40,7 @@ class ApplicationServer;
 class AgencyCallbackRegistry {
  public:
   explicit AgencyCallbackRegistry(application_features::ApplicationServer&,
-                                  std::string const&);
+                                  std::string const& callbackBasePath);
 
   ~AgencyCallbackRegistry();
 
@@ -58,6 +63,8 @@ class AgencyCallbackRegistry {
   std::string const _callbackBasePath;
 
   std::unordered_map<uint64_t, std::shared_ptr<AgencyCallback>> _endpoints;
+  
+  Counter& _totalCallbacksRegistered;
 };
 
 }  // namespace arangodb
